--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "sync-prompt": "^0.4.1"
   },
   "devDependencies": {
+    "blanket": "^1.1.6",
     "chai": "^1.9.1",
+    "coveralls": "^2.11.1",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
     "jshint-stylish": "^0.4.0",
-    "mocha": "^1.21.0"
+    "mocha": "^1.21.0",
+    "mocha-lcov-reporter": "0.0.1"
   }
 }
