--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "description": "A property management app with Node and MongoDB",
   "main": "app/index.js",
+  "bin": {"coveralls" : "./node_modules/coveralls/bin/coveralls.js"},
   "directories": {
-    "test": "test"
+    "test": "test",
+    "coveralls" : "./node_modules/mocha/bin/mocha test --recursive -r blanket -R mocha-lcov-reporter | coveralls"
   },
   "scripts": {
     "test": "mocha test --recursive -R spec"
@@ -19,6 +21,11 @@
     "url": "https://github.com/ABarnhard/property-manager/issues"
   },
   "homepage": "https://github.com/ABarnhard/property-manager",
+  "config": {
+    "blanket": {
+      "pattern": "/app/"
+    }
+  },
   "dependencies": {
     "chalk": "^0.5.1",
     "lodash": "^2.4.1",
